// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullText /> should render a disabled fulltext filter 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Fulltext filter
  </OrizzonteFilterCaption>
  <input
    className="orizzonte__filter-fulltext orizzonte__filter-fulltext--disabled"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="This is a textarea placeholder..."
    type="text"
    value=""
  />
</div>
`;

exports[`<FullText /> should render a fulltext filter 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Fulltext filter
  </OrizzonteFilterCaption>
  <input
    className="orizzonte__filter-fulltext"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="This is a textarea placeholder..."
    type="text"
    value="some keywords"
  />
</div>
`;

exports[`<FullText /> should render a multiline fulltext filter with current value and max width / height 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Fulltext filter
  </OrizzonteFilterCaption>
  <textarea
    className="orizzonte__filter-fulltext orizzonte__filter-fulltext--multiline"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="This is a textarea placeholder..."
    style={
      Object {
        "maxHeight": "500px",
        "maxWidth": "500px",
      }
    }
    value="Current textarea value"
  />
</div>
`;
